--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "chess.js": "^1.0.0-beta.6",
     "chessboardjsx": "^2.4.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
