--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
